// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo test cases Render check 1`] = `
<DocumentFragment>
  <div
    class="css-149s6ly"
  >
    CoursesBox
  </div>
</DocumentFragment>
`;

exports[`Logo test cases Render with custom size 1`] = `
<DocumentFragment>
  <div
    class="css-pz6si5"
    size="10"
  >
    CoursesBox
  </div>
</DocumentFragment>
`;
